--- a/themes/ocean/_config.yml
+++ b/themes/ocean/_config.yml
@@ -8,7 +8,7 @@ rss: /atom.xml
 
 # Miscellaneous
 favicon: /favicon.ico
-brand: /images/hexo.svg
+brand: /images/avatar.jpg
 
 # Ocean 主页视频
 # 多种格式的视频用于支持不同的浏览器，这里只需要配置好路径，前提是我把视频相关文件统一目录存放。
