--- a/_config.yml
+++ b/_config.yml
@@ -114,3 +114,7 @@ feed:
   content_limit: 140
   content_limit_delim: ' '
   order_by: -date
+lazyload:
+  enable: true
+  onlypost: false
+  loadingImg: 
