--- a/themes/ocean/_config.yml
+++ b/themes/ocean/_config.yml
@@ -7,7 +7,7 @@ menu:
 rss: /atom.xml
 
 # Miscellaneous
-favicon: /favicon.ico
+favicon: /images/favicon.ico
 brand: /images/avatar.jpg
 
 # Ocean 主页视频
