--- a/themes/ocean/_config.yml
+++ b/themes/ocean/_config.yml
@@ -40,10 +40,10 @@ gitalk:
 
 # Valine
 valine:
-  enable: false      # 是否启用，默认：false（关闭），true（启用）
+  enable: true      # 是否启用，默认：false（关闭），true（启用）
   el: 'vcomments'      # Valine 的初始化挂载器，无需更改
-  appId:       # 从 LeanCloud 的应用中得到的 appId
-  appKey:       # 从 LeanCloud 的应用中得到的APP Key
+  appId: M7k7SAIftnxPYMC2oYh1Jwcq-gzGzoHsz      # 从 LeanCloud 的应用中得到的 appId
+  appKey: Wx9rXDlxP84bVtuhEpKrNdkY     # 从 LeanCloud 的应用中得到的APP Key
   notify: false      # 评论回复邮件提醒，默认：false（关闭），true（启用）
   verify: true      # 验证码，为避免过多的垃圾评论，所以默认 true（启用），false（关闭）
   avatar: 'mp'      # Gravatar 头像展示方式
